--- a/CoronaVaccineApp2-FromValidations/src/main/webapp/corona_vaccine.html
+++ b/CoronaVaccineApp2-FromValidations/src/main/webapp/corona_vaccine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Corona Vaccine App</title>
+  <title>Corona</title>
   <script type="text/javascript" src="js/validation.js"></script>
 </head>
 <body>
